# seeker

./: .gitignore  pyproject.toml  run.sh
seeker/: __init__.py  cli.py  cv_parser.py  generator.py  interactive.py  matcher.py  models.py  scrapers.py
seeker/web/: app.py  cv_builder.py  pretty_cv.py
seeker/web/static/: index.html
