[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seeker"
version = "0.1.0"
description = "AI-powered job seeking agent that scrapes the web and matches jobs to your CV"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pdfplumber>=0.11.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "fake-useragent>=1.5.0",
    "html2text>=2024.2.26",
    "feedparser>=6.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "fpdf2>=2.7.0",
]

[project.scripts]
seeker = "seeker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["seeker"]
